--- a/src/components/calculator/MyCalculator.css
+++ b/src/components/calculator/MyCalculator.css
@@ -1,62 +1,62 @@
 .calculator {
-    width: 320px;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    border-radius: 10px;
-    background-color: grey;
-    margin: auto;
-    padding: 10px;
+    width: 320px; /* 設置計算機的寬度 */
+    color: white; /* 設置文字顏色為白色 */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* 設置字體 */
+    border-radius: 10px; /* 設置邊框圓角半徑為 10 像素 */
+    background-color: grey; /* 設置背景顏色為灰色 */
+    margin: auto; /* 設置自動外邊距，水平居中 */
+    padding: 10px; /* 設置內邊距為 10 像素 */
 }
 
 .board {
-    display: inline-block;
-    margin: 10px;
+    display: inline-block; /* 設置為 inline-block 顯示模式 */
+    margin: 10px; /* 設置外邊距為 10 像素 */
 }
 
 .display {
-    width: 100%;
-    height: 75px;
-    background-color: black;
-    text-align: right;
-    font-size: 50px;
-    border-radius: 5px;
+    width: 100%; /* 設置寬度為 100% */
+    height: 75px; /* 設置高度為 75 像素 */
+    background-color: black; /* 設置背景顏色為黑色 */
+    text-align: right; /* 設置文字右對齊 */
+    font-size: 50px; /* 設置字體大小為 50 像素 */
+    border-radius: 5px; /* 設置邊框圓角半徑為 5 像素 */
 }
 
 .btn {
-    background-color: #323232;
-    color: white;
-    width: 60px;
-    height: 60px;
-    font-size: 25px;
-    border-radius: 50%;
-    outline: none;
-    border: 0px;
-    padding: 5%;
-    margin: 5px;
-    cursor: pointer;
+    background-color: #323232; /* 設置背景顏色為深灰色 */
+    color: white; /* 設置文字顏色為白色 */
+    width: 60px; /* 設置寬度為 60 像素 */
+    height: 60px; /* 設置高度為 60 像素 */
+    font-size: 25px; /* 設置字體大小為 25 像素 */
+    border-radius: 50%; /* 設置邊框圓角半徑為 50%（圓形按鈕） */
+    outline: none; /* 移除按鈕的外框 */
+    border: 0px; /* 設置邊框寬度為 0 像素 */
+    padding: 5%; /* 設置內邊距為 5% */
+    margin: 5px; /* 設置外邊距為 5 像素 */
+    cursor: pointer; /* 設置滑鼠指標為指針 */
 }
 
 .btn-action {
-    background-color: brown;
-    color: bisque;
+    background-color: brown; /* 設置背景顏色為棕色 */
+    color: bisque; /* 設置文字顏色為陶瓷色 */
 }
 
 .btn-operator {
-    background-color: coral;
+    background-color: coral; /* 設置背景顏色為珊瑚色 */
 }
 
 .btn-0 {
-    width: 130px;
-    border-radius: 30px;
+    width: 130px; /* 設置寬度為 130 像素 */
+    border-radius: 30px; /* 設置邊框圓角半徑為 30 像素 */
 }
 
-.btn:hover{
-    background-color: white;
-    color: black;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+.btn:hover {
+    background-color: white; /* 設置滑鼠懸停時背景顏色為白色 */
+    color: black; /* 設置滑鼠懸停時文字顏色為黑色 */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.7); /* 設置滑鼠懸停時的陰影效果 */
 }
 
-.btn:active{
-    background-color: darkred;
-    color: white;
+.btn:active {
+    background-color: darkred; /* 設置按下時背景顏色為深紅色 */
+    color: white; /* 設置按下時文字顏色為白色 */
 }
